# agentic-workflow

./: AGENTS.md  README.md
.agentic-workflow/: config.json  manifest.json
.github/workflows/: 00-lint.yml  01-requirements-qa.yml  01-requirements.yml  02-approve-gate.yml  02-approve-invalidate.yml  02-architect-qa.yml  02-architect.yml  02-coder.yml  02-testcase-dev.yml  03-ci-gate.yml  03-tester.yml  lint.yml  pr-check.yml
agentic-issues/issue-13-hello-world-cli-program-in-python/: 00-user-brief.md  01-requirements-qa.md  01-requirements.md  02-architecture-qa.md  02-architecture.md  03-test-cases.md  04-report.md
agentic-issues/issue-13-hello-world-cli-program-in-python/src/: DECISIONS.md  README.md  hello.py
agents/architect/: CLAUDE.md
agents/architect-qa/: CLAUDE.md
agents/coder/: CLAUDE.md
agents/requirements/: CLAUDE.md
agents/requirements-qa/: CLAUDE.md
agents/testcase-dev/: CLAUDE.md
agents/tester/: CLAUDE.md
artifacts/: 00-pipeline-log.md  00-user-brief.md  01-requirements-qa.md  01-requirements.md  02-architecture-qa.md  02-architecture.md  02-design-baseline.md  03-test-cases.md  notes.md
artifacts/src/: README.md  pyproject.toml
artifacts/src/agentic_workflow/: acceptance.py  cli.py  config.py  models.py  templates.py
docs/: 00-pipeline-log.md  00-user-brief.md  02-architecture-qa.md  02-architecture.md  04-report.md
docs/src/: DECISIONS.md  README.md
docs/src/agentic_workflow/: __init__.py  acceptance.py  errors.py  (+1 more)
src/: .gitignore  DECISIONS.md
src/agentic_workflow/: ci_gate.py  constants.py  installer.py  templates.py
(+5 files in other folders)
