[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-workflow-installer"
version = "0.1.0"
description = "安装并管理 Agentic Workflow 所需的 GitHub Actions 工作流文件"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Coder Agent" }
]
license = { text = "MIT" }
dependencies = []

[project.scripts]
agentic-workflow = "agentic_workflow.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["agentic_workflow*"]
